@startuml
' https://www.plantuml.com/plantuml/uml/

hide empty members

class LcdMenu {
    +virtual bool up()
    +virtual bool down()
    +virtual bool enter()
    +virtual bool back()
    +virtual bool left()
    +virtual bool right()
    +virtual bool backspace()
    +virtual bool typeChar(char c)
    +virtual bool clear()
}

class MenuItem {
    +virtual bool up()
    +virtual bool down()
    +virtual bool enter()
    +virtual bool back()
    +virtual bool left()
    +virtual bool right()
    +virtual bool backspace()
    +virtual bool typeChar(char c)
    +virtual bool clear()
}

class ItemCommand {
    +bool enter() override
}

class ItemList {
    +bool up() override
    +bool down() override
    +bool enter() override
    +bool back() override
}

class ItemInput {
    +bool up() override
    +bool down() override
    +bool enter() override
    +bool back() override
    +bool left() override
    +bool right() override
    +bool backspace() override
    +bool typeChar(char c) override
    +bool clear() override
}

LcdMenu::up -r-> MenuItem::up
LcdMenu::down -r-> MenuItem::down
LcdMenu::enter -r-> MenuItem::enter
LcdMenu::back -r-> MenuItem::back
LcdMenu::left -r-> MenuItem::left
LcdMenu::right -r-> MenuItem::right
LcdMenu::backspace -r-> MenuItem::backspace
LcdMenu::typeChar -r-> MenuItem::typeChar
LcdMenu::clear -r-> MenuItem::clear
ItemCommand -u-|> MenuItem
ItemList -u-|> MenuItem
ItemInput -u-|> MenuItem
@enduml